--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_chat.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_chat.xml
@@ -25,7 +25,8 @@
         android:layout_height="40dp"
         android:background="@drawable/spinner_style"
         android:layout_marginTop="10dp"
-        android:saveEnabled="false">
+        android:saveEnabled="false"
+        android:visibility="invisible">
     </Spinner>
 
     <ScrollView
