--- a/Transportaciones_CICESE/app/src/main/res/layout/message_area.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/message_area.xml
@@ -16,7 +16,8 @@
         android:hint="@string/write_a_message"
         android:maxHeight="80dp"
         android:layout_weight="0.98"
-        tools:ignore="InefficientWeight" />
+        tools:ignore="InefficientWeight"
+        android:enabled="false"/>
 
     <ImageView
         android:id="@+id/sendButton"
@@ -24,5 +25,6 @@
         android:layout_height="45dp"
         android:padding="4dp"
         android:src="@drawable/send_icon"
-        tools:ignore="ContentDescription,InefficientWeight" />
+        tools:ignore="ContentDescription,InefficientWeight"
+        android:saveEnabled="false"/>
 </LinearLayout>
