--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_chat.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_chat.xml
@@ -24,7 +24,8 @@ tools:context="com.transporte.cicese.transportaciones_cicese.chatActivity">
         android:layout_height="40dp"
         android:background="@drawable/spinner_style"
         android:layout_marginTop="10dp"
-        android:saveEnabled="false">
+        android:saveEnabled="false"
+        android:visibility="invisible">
 
     </Spinner>
 <ScrollView
@@ -51,5 +52,6 @@ tools:context="com.transporte.cicese.transportaciones_cicese.chatActivity">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="bottom"
-    android:layout_marginTop="5dp"/>
+    android:layout_marginTop="5dp"
+    />
 </LinearLayout>
