--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_asistente.xml
@@ -63,7 +63,8 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/username"
-                android:inputType="text" />
+                android:inputType="text"
+                android:maxLength="8"/>
 
             <EditText
                 android:id="@+id/contrasena_asistente"
@@ -92,7 +93,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/nombre"
-                android:inputType="text"
+                android:inputType="textCapWords"
                 android:layout_below="@+id/contrasena_asistente"
                 android:layout_alignStart="@+id/contrasena_asistente" />
 
@@ -109,7 +110,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/apellido_paterno"
-                android:inputType="text" />
+                android:inputType="textCapWords" />
 
             <EditText
                 android:id="@+id/am_asistente"
@@ -124,7 +125,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/apellido_materno"
-                android:inputType="text" />
+                android:inputType="textCapWords" />
 
             <!--Info. Formato-->
             <EditText
