--- a/Transportaciones_CICESE/app/src/main/res/drawable/spinner_style.xml
+++ b/Transportaciones_CICESE/app/src/main/res/drawable/spinner_style.xml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <stroke
-        android:width="1dp"
-        android:color="#959595" />
-
-    <corners
-        android:radius="10dp"/>
-
-    <padding
-        android:left="10dp"
-        android:top="5dp"
-        android:right="10dp"
-        android:bottom="5dp"
-        />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <layer-list>
+        <item>
+            <shape>
+            <stroke
+                android:width="1dp"
+                android:color="#959595" />
+                <solid android:color="#fff"/>
+                <corners
+                    android:radius="10dp"/>
+            <padding
+                android:left="10dp"
+                android:top="5dp"
+                android:right="10dp"
+                android:bottom="5dp" />
+        </shape>
+        </item>
+        <item >
+            <bitmap
+                android:gravity="right|center"
+                android:src="@drawable/ic_spinner" />
+        </item>
+    </layer-list>
+    </item>
+</selector>
