--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_chat.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_chat.xml
@@ -16,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/spinner_style"
+        android:spinnerMode="dropdown"
         android:visibility="invisible">
 
     </Spinner>
@@ -24,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@drawable/spinner_style"
+        android:spinnerMode="dropdown"
         android:layout_marginTop="10dp"
         android:saveEnabled="false">
     </Spinner>
