--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_pasajero.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_pasajero.xml
@@ -62,16 +62,17 @@
                 android:id="@+id/longitud_lugar_destino"
                 android:layout_width="250dp"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
+                android:layout_alignStart="@+id/imageView10"
                 android:layout_below="@+id/textView6"
-                android:layout_marginStart="43dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="9dp"
                 android:background="@drawable/border_style"
                 android:drawableLeft="@drawable/user_icon"
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/username"
-                android:inputType="text" />
+                android:inputType="text"
+                android:maxLength="8"/>
 
             <EditText
                 android:id="@+id/latitud_lugar_destino"
@@ -102,7 +103,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/nombre"
-                android:inputType="text" />
+                android:inputType="textCapWords" />
 
 
             <EditText
@@ -117,7 +118,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/apellido_paterno"
-                android:inputType="text" />
+                android:inputType="textCapWords" />
 
             <EditText
                 android:id="@+id/am_pasajero"
@@ -132,7 +133,7 @@
                 android:drawablePadding="5dp"
                 android:ems="10"
                 android:hint="@string/apellido_materno"
-                android:inputType="text" />
+                android:inputType="textCapWords" />
 
             <EditText
                 android:id="@+id/tel_pasajero"
