--- a/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_solicitud.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/activity_registro_solicitud.xml
@@ -84,7 +84,8 @@
                     android:layout_alignStart="@+id/folioSolicitud"
                     android:layout_below="@+id/folioSolicitud"
                     android:layout_marginTop="13dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:ems="10" />
 
                 <Button
@@ -286,10 +287,12 @@
                     android:layout_height="40dp"
                     android:layout_alignStart="@+id/color_vehiculo"
                     android:layout_alignTop="@+id/modelo_vehiculo"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:ems="10"
                     android:entries="@array/marcas_array"
-                    android:prompt="@string/marca" />
+                    android:prompt="@string/marca"
+                     />
 
                 <!--SELECCIONAR SPINNE, DEFAULT 2017R-->
                 <Spinner
@@ -301,7 +304,8 @@
                     android:layout_marginTop="9dp"
                     android:entries="@array/years_array"
                     android:prompt="@string/year_prompt"
-                    android:background="@drawable/border_style"/>
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"/>
 
                 <Spinner
                     android:id="@+id/color_vehiculo"
@@ -309,7 +313,8 @@
                     android:layout_height="40dp"
                     android:layout_above="@+id/numero_placas"
                     android:layout_alignEnd="@+id/id_chofer"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:ems="10"
                     android:entries="@array/colores_array"/>
 
@@ -349,7 +354,8 @@
                     android:layout_below="@+id/tipo_vehiculo"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="12dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:ems="10" />
 
                 <Button
