--- a/Transportaciones_CICESE/app/src/main/res/layout-land/updatesolicitudform.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout-land/updatesolicitudform.xml
@@ -57,7 +57,8 @@
                 android:layout_below="@+id/textView27"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/border_style" />
+                android:background="@drawable/spinner_style"
+                android:spinnerMode="dropdown" />
 
 
             <EditText
