--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_login.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff"
+    android:background="#ffffff"
     tools:context="com.transporte.cicese.transportaciones_cicese.LoginActivity">
 
     <EditText
