--- a/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/activity_registro_solicitud.xml
@@ -83,10 +83,9 @@
                     android:layout_alignStart="@+id/folioSolicitud"
                     android:layout_below="@+id/folioSolicitud"
                     android:layout_marginTop="13dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
                     android:ems="10"
-                    android:spinnerMode="dialog"
-                    />
+                    android:spinnerMode="dialog" />
 
                 <Button
                     android:id="@+id/registrarSolicitud"
@@ -129,7 +128,7 @@
                 android:layout_height="1000dp"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
-                android:visibility="invisible">
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/image"
@@ -289,13 +288,12 @@
                     android:layout_alignStart="@+id/modelo_vehiculo"
                     android:layout_below="@+id/modelo_vehiculo"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
                     android:entries="@array/marcas_array"
                     android:ems="10"
                     android:spinnerMode="dialog"
                     android:prompt="@string/marca"/>
 
-                <!--SELECCIONAR SPINNE, DEFAULT 2017R-->
                 <Spinner
                     android:id="@+id/anio_vehiculo"
                     android:layout_width="145dp"
@@ -314,7 +312,7 @@
                     android:layout_height="40dp"
                     android:layout_above="@+id/numero_placas"
                     android:layout_alignEnd="@+id/marca_vehiculo"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
                     android:ems="10"
                     android:spinnerMode="dialog"
                     android:prompt="@string/color"
@@ -356,7 +354,8 @@
                     android:layout_alignStart="@+id/tipo_vehiculo"
                     android:layout_below="@+id/tipo_vehiculo"
                     android:layout_marginTop="10dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dialog"
                     android:ems="10" />
 
                 <Button
