--- a/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/app_bar_inicio_choferes.xml
@@ -191,16 +191,16 @@
                 android:id="@+id/irAMisServiciosC"
                 android:layout_width="300dp"
                 android:layout_height="90dp"
-                android:background="@drawable/fast_button_style"
                 android:layout_below="@+id/textView15"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="43dp"
+                android:background="@drawable/fast_button_style"
+                android:drawableLeft="@drawable/services_icon_b"
+                android:paddingLeft="15dp"
                 android:text="Ir a mis servicios"
                 android:textAllCaps="false"
-                android:textSize="15dp"
                 android:textColor="#ffff"
-                android:drawableLeft="@drawable/services_icon_b"
-                android:paddingLeft="15dp">
+                android:textSize="15dp">
 
             </Button>
 
