--- a/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
+++ b/Transportaciones_CICESE/app/src/main/res/layout/updatesolicitudform.xml
@@ -54,56 +54,57 @@
                 android:id="@+id/solicitudesSpinner"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_alignStart="@+id/imageView10"
+                android:layout_alignStart="@+id/textView27"
                 android:layout_below="@+id/textView27"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/border_style" />
+                android:layout_marginTop="9dp"
+                android:background="@drawable/spinner_style"
+                android:dropDownWidth="wrap_content"
+                android:spinnerMode="dropdown" />
 
 
             <EditText
                 android:id="@+id/folioEdit"
-                android:drawableLeft="@drawable/emp_icon"
-                android:drawablePadding="5dp"
-                android:background="@drawable/border_style"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_below="@+id/solicitudesSpinner"
-                android:layout_alignStart="@+id/solicitudesSpinner"
-                android:layout_marginTop="10dp"
+                android:layout_alignStart="@+id/imageView10"
 
+                android:layout_below="@+id/solicitudesSpinner"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/border_style"
+                android:drawableLeft="@drawable/emp_icon"
+                android:drawablePadding="5dp"
                 android:ems="10"
+                android:enabled="false"
                 android:hint="Folio"
-                android:inputType="number"
-                android:enabled="false"/>
+                android:inputType="number" />
 
 
             <Spinner
                 android:id="@+id/invitadoSpinner"
-
-                android:background="@drawable/border_style"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
                 android:layout_below="@+id/folioEdit"
-                android:layout_alignStart="@+id/folioEdit"
-                android:layout_marginTop="10dp"
-
-                android:enabled="false"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/spinner_style"
+                android:enabled="false"
+                android:spinnerMode="dropdown" />
 
 
             <Button
                 android:id="@+id/buttonUpdateSolicitud"
 
-                android:background="@drawable/secondary_button_style"
                 android:layout_width="300dp"
                 android:layout_height="40dp"
-                android:layout_below="@+id/invitadoSpinner"
-                android:layout_alignStart="@+id/invitadoSpinner"
-                android:layout_marginTop="10dp"
 
-                android:textColor="#ffff"
-                android:textAllCaps="false"
+                android:layout_alignStart="@+id/solicitudesSpinner"
+                android:layout_below="@+id/invitadoSpinner"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/secondary_button_style"
+                android:enabled="false"
                 android:text="@string/actualizar_solicitud"
-                android:enabled="false"/>
+                android:textAllCaps="false"
+                android:textColor="#ffff" />
 
             <CheckBox
                 android:id="@+id/checkBoxServicios"
@@ -131,7 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:layout_below="@+id/formContainer"
             android:layout_alignStart="@+id/formContainer"
             >
@@ -164,8 +165,11 @@
                 android:layout_height="40dp"
                 android:layout_alignStart="@+id/ima2"
                 android:layout_below="@+id/ima2"
-                android:layout_marginTop="17dp"
-                android:background="@drawable/border_style" />
+                android:layout_marginTop="11dp"
+                android:background="@drawable/spinner_style"
+                android:spinnerMode="dropdown"
+                android:dropDownWidth="wrap_content"
+                 />
 
             <RelativeLayout
                 android:id="@+id/servicioForm"
@@ -221,6 +225,7 @@
                     android:background="@drawable/border_style"
                     android:drawablePadding="5dp"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName" />
 
 
@@ -246,7 +251,8 @@
                     android:layout_marginTop="13dp"
                     android:background="@drawable/border_style"
                     android:ems="10"
-                    android:inputType="text" />
+                    android:enabled="false"
+                    android:inputType="text"/>
 
                 <!--EditText
                     android:id="@+id/latitud_lugar_destino"
@@ -399,18 +405,19 @@
                     android:layout_alignEnd="@+id/tipo_vehiculo"
                     android:layout_below="@+id/tipo_vehiculo"
                     android:layout_marginTop="12dp"
-                    android:background="@drawable/border_style"
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dropdown"
                     android:ems="10"
                     android:inputType="text" />
 
                 <Spinner
                     android:id="@+id/choferSpinner"
-                    android:background="@drawable/border_style"
                     android:layout_width="300dp"
                     android:layout_height="40dp"
                     android:layout_below="@+id/solicitudSpinner"
                     android:layout_alignStart="@+id/solicitudSpinner"
-
+                    android:background="@drawable/spinner_style"
+                    android:spinnerMode="dropdown"
                     android:layout_marginTop="10dp"
                     android:ems="10"
                     android:inputType="number" />
@@ -462,7 +469,7 @@
                     android:layout_below="@+id/textViewDD"
                     android:layout_marginTop="20dp"
                     android:background="@drawable/tercer_button_style"
-                    android:text="Seleccionar encuentro"
+                    android:text="Seleccionar el lugar de encuentro"
                     android:textAllCaps="false" />
 
                 <Button
@@ -472,7 +479,7 @@
                     android:layout_alignEnd="@+id/descripcion_lugar_destino"
                     android:layout_below="@+id/textViewDD2"
                     android:layout_marginTop="12dp"
-                    android:text="Seleccionar destino"
+                    android:text="Seleccionar el lugar de destino"
                     android:textAllCaps="false"
                     android:background="@drawable/tercer_button_style"/>
 
