--- a/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_choferes_drawer.xml
+++ b/Transportaciones_CICESE/app/src/main/res/menu/activity_inicio_choferes_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_servicio"
             android:icon="@drawable/services_icon"
-            android:title="@string/servicios" />
+            android:title="@string/iramisservicios" />
         <item
             android:id="@+id/nav_push"
             android:icon="@drawable/noti_icon"
